--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <title>Instagram</title>
 </head>
 <body>
-    
+    <div class="instagram-wrapper">
+        <div class="instagram-phone">
+            <img src="img/celular.png" alt="celular">
+        </div>
+        <div class="instagram-account">
+            <div class="group">
+                <img src="img/Instagram-Logo.png" class="logo-in" alt="logo">
+                <div class="profile-photo">
+                    <img src="img/perfil.jpg" alt="perfil">
+                </div>
+                <a href="#" class="login">Continue como vic_skm</a>
+                <a href="#" class="logout">Remover conta</a>
+            </div>
+            <div class="group">
+                <p class="not-account">Não é vic_skm</p>
+                <p class="not-account">
+                    <spam class="link-blue">Alterar contas</spam>
+                    ou
+                    <spam class="link-blue">Inscreva-se</spam>
+                </p>
+            </div>
+            <div class="get-app">
+                <p class="get-app">Baixe o aplicativo</p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
+            </div>
+        </div>
+    </div>   
 </body>
 </html>
